--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -854,6 +854,17 @@
   --clr-stack-view-stack-block-expanded-text-color: var(--cds-alias-object-interaction-color-selected); // var(--clr-color-neutral-1000);
   --clr-stack-view-stack-block-caret-color: var(--cds-alias-object-interaction-color-selected); // indirectly mapped
 
+  --clr-stack-view-stack-block-label-padding: var(--cds-global-space-5) var(--cds-global-space-6);
+  --clr-stack-view-key-margin: 0 var(--cds-global-space-7) 0 0;
+  --clr-stack-view-stack-block-caret-margin-right: var(--cds-global-space-5);
+  --clr-stack-view-border-radius: var(--cds-alias-object-border-radius-100);
+  --clr-stack-view-stack-block-caret-dimension: var(--cds-global-space-7);
+  --clr-stack-view-block-label-before-margin: var(--cds-global-space-3) var(--cds-global-space-5) 0 0; // ATM remove this property
+  --clr-stack-view-stack-children-block-label-padding-left: var(--cds-global-space-12);
+  --clr-stack-view-stack-children-block-content-padding-left: 0;
+  --clr-stack-view-stack-title-padding: 0 0 var(--cds-global-space-5);
+  --clr-stack-view-stack-title-btn-margin-right: 0; // ATM remove this property
+
   /* Subnav */
 
   --clr-subnav-bg-color: var(--cds-alias-object-container-background); // var(--clr-color-neutral-0);
